--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ghostedit",
   "title": "GhostEdit WYSIWYG editor",
-  "version": "1.0pre",
+  "version": "1.0.0-pre",
   "homepage": "http://ghosted.it",
   "author": {
     "name": "Nico Burns",
@@ -10,20 +10,22 @@
   "description": "An open source JavaScript WYSIWYG editor focused on usability",
   "browsersupport": "Internet Explorer 6+, Mozilla Firefox 3.6+, Google Chrome, Apple Safari (latest), Opera (latest)",
   "contributors": [ 
-    {
-      "name": "Nico Burns",
-      "email": "nico@nicoburns.com"
-    } 
+    { "name": "Nico Burns", "email": "nico@nicoburns.com" } 
   ],
   "repository": {
     "type": "git",
     "url": "https://github.com/nicoburns/ghostedit.git"
   },
   "dependencies": {
-    "lasso": "1.4.0"
+    "lasso": "1.5.0"
   },
   "devDependencies": {
-    "grunt": "~0.3.17"
+    "grunt": "~0.4.0",
+    "grunt-contrib-clean": "latest",
+    "grunt-contrib-concat": "latest",
+    "grunt-contrib-jshint": "latest",
+    "grunt-contrib-uglify": "latest",
+    "grunt-contrib-compress": "latest"
   },
   "licenses": [
 		{
